--- a/style.css
+++ b/style.css
@@ -36,19 +36,6 @@ body {
     background-color: whitesmoke;
     border-radius: 6px;
 }
-.navbar a {
-    font-size: 15px;
-    color: black;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 25px;
-}
-.navbar a:hover{
-    color: black;
-}
-.navbar a.active{
-    color: black;
-}
 .main{
     min-height: 100vh;
     background: url('background1.png') no-repeat;
@@ -153,7 +140,7 @@ body {
     align-items: center;
     width: 100px;
     height: 43px;
-    background: #b94d4d;
+    background: whitesmoke;
     border-radius: 6px;
     box-shadow: 0 0 10px rgb(40, 77, 47);
     text-decoration: none;
@@ -163,12 +150,12 @@ body {
     transition: .5s;
 }
 .popup .btn .inf:hover {
-    background: whitesmoke;
+    background: gray;
     box-shadow: none;
 }
 .quizsec{
     position: relative;
-    left: 50%;
+    left: -50%;
     width: 100%;
     background: url(background6.avif);
     background-size: 100% 100%;
@@ -199,6 +186,8 @@ body {
     opacity: 0;
     pointer-events: none;
     transform: scale(.9);
+    transition: .3s ease;
+    transition-delay: 0s;
 }
 .quizsec .quizbox.active{
     opacity: 1;
@@ -291,4 +280,96 @@ body {
     pointer-events: auto;
     background: transparent;
     box-shadow: 0 0 10px rgb(40, 77, 47);
+}
+.quizsec .result-box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(.9);
+    width: 500px;
+    background: gray;
+    border: 2px solid black;
+    border-radius: 6px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: .3s ease;
+}
+.quizsec .result-box.active{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%,-50%) scale(1);
+}
+.result-box h2{
+    font-size: 52px;
+}
+.result-box .percentage-container{
+    width: 300px;
+    background: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0 40px;
+}
+.percentage-container .circular-progress{
+    position: relative;
+    width: 250px;
+    height: 250px;
+    background: conic-gradient(rgb(47, 88, 108) 3.6deg,whitesmoke 0deg);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.percentage-container .circular-progress::before{
+    content: '';
+    position: absolute;
+    width: 210px;
+    height: 210px;
+    background: gray;
+    border-radius: 50%;
+
+}
+.circular-progress .progress-value{
+    position: relative;
+    font-size: 30px;
+    font-weight: 500px;
+}
+.percentage-container .score-text{
+    font-size: 25px;
+    font-weight: 500px;
+    margin-top: 20px;
+}
+.result-box .buttons{
+    display: flex;
+}
+.buttons button{
+    width: 130px;
+    height: 47px;
+    background: rgb(47, 88, 108);
+    border: 2px solid rgb(47, 88, 108);
+    outline: none;
+    border-radius: 6px;
+    font-size: 16px;
+    color: white;
+    font-weight: 500px;
+    margin: 0 20px 20px;
+    cursor: pointer;
+    transition: .5s;
+}
+.buttons button:nth-child(1):hover{
+    background: rgb(47, 88, 108);
+    border-color: white;
+}
+.buttons button:nth-child(2){
+    background: rgb(47, 88, 108);
+    color: white;
+}
+.buttons button:nth-child(2):hover{
+    background: rgb(47, 88, 108);
+    border: 2px solid white;
+    color: white;
 }
